src/objects/dwp_kitv__Visit__c.object
<CustomObject>
    <description>Main object to manage visits</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>dwp_kitv__account_id__r.Owner.FirstName &amp; &quot; &quot; &amp; dwp_kitv__account_id__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateFormula__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de creacion hora</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hora_Check_In__c</fullName>
        <description>Hora Check In</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hora Check In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hora_Check_Out__c</fullName>
        <description>Hora Check Out</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hora Check Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Minute_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Minute Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_meeting_changed_peru__c</fullName>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_status_type__c,&quot;03&quot;),(IMAGE(&quot;/resource/bbva_icon_alert&quot;,&quot;Recuerda pulsar click en &apos;Crear / Actualizar visita&apos; para sincronizar el calendario del contacto seleccionado.&quot;,24,24)),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify meeting changed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ubicaci_n_Check_In__c</fullName>
        <description>Ubicación de check in</description>
        <label>Ubicación Check In</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Ubicaci_n_Check_Out__c</fullName>
        <description>Ubicacíon Check Out</description>
        <label>Ubicación Check Out</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>account_name__c</fullName>
        <formula>dwp_kitv__account_id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_parent__c</fullName>
        <formula>IF(dwp_kitv__account_id__r.RecordType.DeveloperName==&apos;Group&apos;,CASESAFEID(dwp_kitv__account_id__c),CASESAFEID(dwp_kitv__account_id__r.ParentId))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commercial_plan_event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan comercial</label>
        <referenceTo>acpl__Commercial_Plan_Event__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_branch_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oficina Principal</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Visitas</relationshipLabel>
        <relationshipName>Visitas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__CloseAllTopics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox allows execute the functionality of close all topics. This field should be hidden for any page layout.</description>
        <inlineHelpText>This checkbox allows execute the functionality of close all topics.</inlineHelpText>
        <label>Do you want to close all topics?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__Main_Contact__c</fullName>
        <description>Name of the main contact of the visit</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the main contact of the visit</inlineHelpText>
        <label>Main Contact</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__TravelTime__c</fullName>
        <description>This field allows you to indicate and knows a travel time that the executive takes between the branch office to the client office.</description>
        <inlineHelpText>Please indicate the time it will take to travel from the branch to the client&apos;s office.</inlineHelpText>
        <label>Travel Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 Minutes</fullName>
                </value>
                <value>
                    <fullName>20 Minutes</fullName>
                </value>
                <value>
                    <fullName>30 Minutes</fullName>
                </value>
                <value>
                    <fullName>40 Minutes</fullName>
                </value>
                <value>
                    <fullName>60 Minutes</fullName>
                </value>
                <value>
                    <fullName>90 Minutes</fullName>
                </value>
                <value>
                    <fullName>120 Minutes</fullName>
                </value>
                <value>
                    <fullName>150 Minutes</fullName>
                </value>
                <value>
                    <fullName>180 Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__account_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account record related to this visit.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__account_type__c</fullName>
        <description>Define record type Account</description>
        <formula>dwp_kitv__account_id__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__country_name__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>CL</fullName>
                    <label>Chile</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Colombia</label>
                </value>
                <value>
                    <fullName>Compass</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>HK</fullName>
                    <label>Hong Kong</label>
                </value>
                <value>
                    <fullName>IN</fullName>
                    <label>India</label>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <label>Indonesia</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <label>Italy</label>
                </value>
                <value>
                    <fullName>JP</fullName>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>MX</fullName>
                    <label>Mexico</label>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                    <label>Peru</label>
                </value>
                <value>
                    <fullName>PT</fullName>
                    <label>Portugal</label>
                </value>
                <value>
                    <fullName>GB</fullName>
                    <label>United Kingdom</label>
                </value>
                <value>
                    <fullName>SG</fullName>
                    <label>Singapore</label>
                </value>
                <value>
                    <fullName>TW</fullName>
                    <label>Taiwan</label>
                </value>
                <value>
                    <fullName>UY</fullName>
                    <label>Uruguay</label>
                </value>
                <value>
                    <fullName>VE</fullName>
                    <label>Venezuela</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__disclosure_info_type__c</fullName>
        <description>Field to select if the visit is Public or Confidential.</description>
        <label>Information disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                    <default>true</default>
                    <label>Not applicable</label>
                </value>
                <value>
                    <fullName>Confidential information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__dwp_kitv_TravelTime__c</fullName>
        <description>This field allows you to indicate and knows a travel time that the executive takes between the branch office to the client office.</description>
        <inlineHelpText>Please indicate the time it will take to travel from the branch to the client&apos;s office.</inlineHelpText>
        <label>Travel Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 Minutos</fullName>
                </value>
                <value>
                    <fullName>20 Minutos</fullName>
                </value>
                <value>
                    <fullName>30 Minutos</fullName>
                </value>
                <value>
                    <fullName>40 Minutos</fullName>
                </value>
                <value>
                    <fullName>60 Minutos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__event_changed_bool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if visit is changed from the related event.</description>
        <label>Event changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__invitee_changed_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if there was a modification on the invitee list</description>
        <label>Invitee changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__lead_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead associated to the visit</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__meeting_changed_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True: the meeting was updated after creation</description>
        <label>Meeting Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__most_recent_visits__c</fullName>
        <description>Formula field to order visits.First, visit not finalized in ascending order, then overdue and finalized visits.</description>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_status_type__c,&apos;Finalized&apos;),TEXT(DATEVALUE(dwp_kitv__visit_start_date__c))&amp;&apos; (&apos;&amp;TEXT(dwp_kitv__visit_status_type__c)&amp;&apos;)&apos;,IF(dwp_kitv__visit_end_date__c&lt;NOW(),&apos;Overdue&apos;,&apos; &apos;&amp;TEXT(DATEVALUE(dwp_kitv__visit_start_date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most recent visits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__notify_meeting_changed__c</fullName>
        <description>Formula field to notify meeting changes.</description>
        <formula>IF(ISPICKVAL(dwp_kitv__visit_status_type__c,&quot;03&quot;),(IMAGE(&quot;/servlet/servlet.FileDownload?file=0157E000000Nx3O&quot;,&quot;Remember to click on &apos;Update visit&apos; to synchronize the calendar of the selected contacts.&quot;)),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recuerde pulsar en &quot;Actualizar visita&quot; para sincronizar el calendario del contacto seleccionado</inlineHelpText>
        <label>Notify meeting changed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__number_of_event_relations__c</fullName>
        <formula>dwp_kitv__visit_contact_persons_number__c  +  dwp_kitv__visit_users_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Event Relations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__region_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__solution_name_path_desc__c</fullName>
        <label>Involved areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GTB</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>GF</fullName>
                </value>
                <value>
                    <fullName>GCC</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__updated__c</fullName>
        <description>Control field to update, Tnis change is then captured by LWC components to display related lists</description>
        <encryptionScheme>None</encryptionScheme>
        <label>updated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_channel__c</fullName>
        <description>Visit Channel</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Onsite</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Online</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_contact_persons_number__c</fullName>
        <description>Number of BBVA contacts in this visit</description>
        <inlineHelpText>Número de contactos BBVA de la visita</inlineHelpText>
        <label>Contacts number</label>
        <summaryForeignKey>dwp_kitv__Visit_Contact__c.dwp_kitv__visit_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_desc__c</fullName>
        <description>Visit Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_duration_number__c</fullName>
        <description>Time in minutes it takes to make the visit. The first hour will be intervals about 15 minutes, then 30 minutes intervals.</description>
        <inlineHelpText>Seleccione la duración en minutos</inlineHelpText>
        <label>Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_end_date__c</fullName>
        <description>Formula field where the duration was added to start date.</description>
        <formula>dwp_kitv__visit_start_date__c + VALUE(TEXT( dwp_kitv__visit_duration_number__c ))/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_location_desc__c</fullName>
        <description>Field to determinate the place where the visit will be realized.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_purpose_type__c</fullName>
        <description>Visit Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Strategic</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Acquisition</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_start_date__c</fullName>
        <description>Field to set the start date time of the visit.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_status_type__c</fullName>
        <description>Status visit</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>Planning</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Arranged</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Arranged - Pending Updates</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Visit Completed - Pending Feedback</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Visit Completed - Minute Sent</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>Finalized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_summary_desc__c</fullName>
        <description>Summary of the visit once finished.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_topics_number__c</fullName>
        <description>Number of topics in this visit</description>
        <inlineHelpText>Número de temas en la visita</inlineHelpText>
        <label>Topics number</label>
        <summaryForeignKey>dwp_kitv__Visit_Topic__c.dwp_kitv__visit_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_users_number__c</fullName>
        <description>Number of BBVA users in this visit</description>
        <inlineHelpText>Número de usuarios BBVA en la visita</inlineHelpText>
        <label>Users number</label>
        <summaryForeignKey>dwp_kitv__Visit_Management_Team__c.dwp_kitv__visit_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>dwp_office_name__c</fullName>
        <formula>dwp_branch_id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oficina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_region_name__c</fullName>
        <formula>dwp_branch_id__r.branch_level4_desc__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keep_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mantener propietario</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>report_visit_status_type__c</fullName>
        <description>Status to Vistit Reports</description>
        <formula>IF(dwp_kitv__visit_start_date__c  &gt;  Now()   ,
        &apos;No realizada&apos;
        ,
        IF(ISPICKVAL(dwp_kitv__visit_status_type__c, &quot;06&quot;),
        &apos;Finalizada&apos;
        ,
        &apos;Pendiente de feedback&apos;
        )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado de visitas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_date_calculated__c</fullName>
        <formula>dwp_kitv__visit_start_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Calculated</label>
        <type>Date</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>dwp_kitv__Past_Visits</fullName>
        <columns>dwp_kitv__account_id__c</columns>
        <columns>NAME</columns>
        <columns>dwp_kitv__visit_start_date__c</columns>
        <columns>dwp_kitv__visit_status_type__c</columns>
        <columns>dwp_kitv__visit_users_number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dwp_kitv__visit_start_date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Visits</label>
    </listViews>
    <listViews>
        <fullName>dwp_kitv__Planned_Visits</fullName>
        <columns>dwp_kitv__account_id__c</columns>
        <columns>NAME</columns>
        <columns>dwp_kitv__visit_start_date__c</columns>
        <columns>dwp_kitv__visit_status_type__c</columns>
        <columns>dwp_kitv__visit_users_number__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>dwp_kitv__visit_start_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Planned Visits</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <recordTypes>
        <fullName>dwp_kitv__AccountVisit</fullName>
        <active>true</active>
        <description>Visit Recordtype from Account</description>
        <label>AccountVisit</label>
    </recordTypes>
    <recordTypes>
        <fullName>dwp_kitv__LeadVisit</fullName>
        <active>true</active>
        <description>Visit RecordType from Lead</description>
        <label>LeadVisit</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>dwp_kitv__Account_is_Changed</fullName>
        <active>true</active>
        <description>Change Account is not allowed.</description>
        <errorConditionFormula>AND (ISCHANGED( dwp_kitv__account_id__c ),$Setup.dwp_kitv__Visit_validations_acc_cs__c.dwp_kitv__bypass__c  = false,$Setup.dwp_kitv__Visit_validations_lead_cs__c.dwp_kitv__bypass__c = false)</errorConditionFormula>
        <errorDisplayField>dwp_kitv__account_id__c</errorDisplayField>
        <errorMessage>Change Account is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__CSIsActiveToCloseAllTopicsAccounts</fullName>
        <active>true</active>
        <description>This rule shows a error message if the user want use the Close All Topics feature and the Custom Setting is inactive.</description>
        <errorConditionFormula>AND( dwp_kitv__account_id__c != null, dwp_kitv__lead_id__c  == null, NOT( $Setup.dwp_kitv__TopicValidationsAcc__c.dwp_kitv__ActivateCloseAllTopicsFeature__c ), NOT(PRIORVALUE( dwp_kitv__CloseAllTopics__c )), dwp_kitv__CloseAllTopics__c)</errorConditionFormula>
        <errorMessage>You can&apos;t use the Close All Topics feature if the Custom Setting isn&apos;t active. Please read the documentation for activation this feature.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__CSIsActiveToCloseAllTopicsLeads</fullName>
        <active>true</active>
        <description>This rule shows a error message if the user want use the Close All Topics feature and the Custom Setting is inactive.</description>
        <errorConditionFormula>AND( dwp_kitv__account_id__c == null, dwp_kitv__lead_id__c  != null, NOT( $Setup.dwp_kitv__TopicValidationsLead__c.dwp_kitv__ActivateCloseAllTopicsFeature__c ), NOT(PRIORVALUE( dwp_kitv__CloseAllTopics__c )), dwp_kitv__CloseAllTopics__c)</errorConditionFormula>
        <errorMessage>You can&apos;t use the Close All Topics feature if the Custom Setting isn&apos;t active. Please read the documentation for activation this feature.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__Days_to_create_account</fullName>
        <active>true</active>
        <description>Visit from account can not be created before the days allowed. Check your configuration.</description>
        <errorConditionFormula>AND((dwp_kitv__visit_start_date__c &lt; NOW() -   $Setup.dwp_kitv__Visit_validations_acc_cs__c.dwp_kitv__days_to_create__c), $Setup.dwp_kitv__Visit_validations_acc_cs__c.dwp_kitv__bypass__c = False,
RecordType.Name = &quot;AccountVisit&quot;)</errorConditionFormula>
        <errorDisplayField>dwp_kitv__visit_start_date__c</errorDisplayField>
        <errorMessage>Visit from account can not be created before the days allowed. Check your configuration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__Days_to_create_lead</fullName>
        <active>true</active>
        <description>Visit from lead can not be created before the days allowed. Check your configuration.</description>
        <errorConditionFormula>AND((dwp_kitv__visit_start_date__c &lt; NOW() -    $Setup.dwp_kitv__Visit_validations_lead_cs__c.dwp_kitv__days_to_create__c), $Setup.dwp_kitv__Visit_validations_lead_cs__c.dwp_kitv__bypass__c = False,
RecordType.Name = &quot;LeadVisit&quot;)</errorConditionFormula>
        <errorDisplayField>dwp_kitv__visit_start_date__c</errorDisplayField>
        <errorMessage>Visit from lead can not be created before the days allowed. Check your configuration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__Lead_is_Changed</fullName>
        <active>true</active>
        <description>Change Lead is not allowed.</description>
        <errorConditionFormula>AND (ISCHANGED(dwp_kitv__lead_id__c),
$Setup.dwp_kitv__Visit_validations_acc_cs__c.dwp_kitv__bypass__c = false,$Setup.dwp_kitv__Visit_validations_lead_cs__c.dwp_kitv__bypass__c = false)</errorConditionFormula>
        <errorDisplayField>dwp_kitv__lead_id__c</errorDisplayField>
        <errorMessage>Change Lead is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__Max_number_of_contacts</fullName>
        <active>true</active>
        <description>It´s not possible to add more than 50 contacts to a visit</description>
        <errorConditionFormula>dwp_kitv__number_of_event_relations__c &gt; 50</errorConditionFormula>
        <errorMessage>It´s not possible to add more than 50 contacts to a visit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>visit_change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE( dwp_kitv__visit_status_type__c),&quot;06&quot;),
            $Profile.Name !=  $Label.profAdministrator,
            $Profile.Name != &quot;Migracion&quot;,
            OR(
            ISCHANGED(dwp_kitv__visit_desc__c),
            ISCHANGED(dwp_kitv__visit_start_date__c),
            ISCHANGED(Name),
            ISCHANGED(dwp_kitv__visit_duration_number__c),
            ISCHANGED(dwp_kitv__visit_purpose_type__c),
            ISCHANGED(dwp_kitv__visit_summary_desc__c),
            ISCHANGED(dwp_kitv__visit_location_desc__c)))</errorConditionFormula>
        <errorMessage>You can edit this visit if is finalized</errorMessage>
    </validationRules>
</CustomObject>